<resources>
    <string name="app_name">AMTrust</string>
    <string name="login">Login</string>
    <string name="login_page_quotes">COVERED.CONNECTED.CONFIDENT</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="imei_number">IMEI Number</string>
    <string name="register">Register</string>
    <string name="check">Check</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="timeline">Timeline</string>
    <string name="more">More</string>
    <string name="my_device">MY DEVICE</string>
    <string name="add_new_device">Add New Device</string>
    <string name="choose">Choose</string>
    <string name="device">Device</string>
    <string name="policy_management">POLICY MANAGEMENT</string>
    <string name="my_policy">MY POLICY</string>
    <string name="phone">phone</string>
    <string name="tablet">tablet</string>
    <string name="television">television</string>
    <string name="product">PRODUCT</string>
    <string name="tech_support">Tech Support</string>
    <string name="step">Steps</string>
    <string name="logout">Logout</string>
    <string name="scan_my_device">scan my device</string>
    <string name="scan_history">scan history</string>
    <string name="device_diagnosis">device diagnosis</string>
    <string name="quick_scan">quick scan</string>
    <string name="crash_report_message">Bug report captured on this page and details will send to server.</string>
    <string name="country">Country</string>
    <string name="continues">Continue</string>
    <string name="device_health_check">device health check</string>
    <string name="quick_check">Quick Check</string>
    <string name="take_picture">Take Picture</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="start">Start</string>
    <string name="health_check_result">Health Check Result</string>
    <string name="health_summary">health summary</string>
    <string name="buy_back_offer">buy back offer</string>
    <string name="summary">Summary</string>

    <string name="full_scan">FULL SCAN</string>
    <string name="audio">Audio</string>
    <string name="battery">Battery</string>
    <string name="camera">Camera</string>
    <string name="call">Call</string>
    <string name="connect">Connect</string>
    <string name="display">Display</string>
    <string name="gps">GPS</string>
    <string name="misc">Misc</string>
    <string name="sensor">Sensor</string>
    <string name="battery_test_description">The Battery is the main resource of your mobile it gives the power for mobile for whole hardware component so we are going to check the battery charging state.</string>
    <string name="about">About</string>
    <string name="battery_test_instructions_title">Instructions</string>
    <string name="battery_test_instructions">1. Click on \"Test Now\" button below.\n\n2. Countdown timer will start automatically, when you click on test now button.\n\n3. With in the time you have to plugin the charger as showcased in image above.\n\n4. If it is success it will show you tick mark.\n5. If you fail to connect with in time, go back to the menu.\n</string>
    <string name="test">Test Now</string>
    <string name="stop">stop</string>

</resources>
