<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/actionbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/top_image"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/battery_charging"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/about"
                    android:textAllCaps="true"
                    android:textColor="@color/actionbar_blue"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/battery_test_description"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/battery_test_instructions_title"
                    android:textAllCaps="true"
                    android:textColor="@color/actionbar_blue"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/battery_test_instructions"
                    android:textSize="16sp"/>
            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:onClick="onTestClick"
            android:text="@string/test"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:id="@+id/count_down_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_count_down"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"/>

            <Button
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:onClick="onStopClick"
                android:text="@string/stop"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tickContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/correct"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_correct"/>
    </LinearLayout>
</FrameLayout>