<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout style="@style/scan_button_container_style">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/audio_button"
                style="@style/scan_button_style"
                android:text="{fa-volume-up}" />

        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/battery_button"
                style="@style/scan_button_style"
                android:text="{fa-bolt}" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/camera_button"
                style="@style/scan_button_style"
                android:text="{fa-camera}" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/connect_button"
                style="@style/scan_button_style"
                android:text="{fa-mobile-phone}" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/scan_button_container_style">

            <ProgressBar
                android:id="@+id/progressBarAudio"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <ProgressBar
                android:id="@+id/progressBarBattery"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <ProgressBar
                android:id="@+id/progressBarCamera"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <ProgressBar
                android:id="@+id/progressBarConnect"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/scan_text_style"
            android:text="@string/audio" />

        <TextView
            style="@style/scan_text_style"
            android:text="@string/battery" />

        <TextView
            style="@style/scan_text_style"
            android:text="@string/camera" />

        <TextView
            style="@style/scan_text_style"
            android:text="@string/connect" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout style="@style/scan_button_container_style">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/device_button"
                style="@style/scan_button_style"
                android:text="{fa-bolt}" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/display_button"
                style="@style/scan_button_style"
                android:text="{fa-desktop}" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/gps_button"
                style="@style/scan_button_style"
                android:text="{fa-location-arrow}" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/sensor_button"
                style="@style/scan_button_style"
                android:text="{fa-adjust}" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/scan_button_container_style">

            <ProgressBar
                android:id="@+id/progressBarDevice"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/actionbar_blue" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <ProgressBar
                android:id="@+id/progressBarDisplay"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <ProgressBar
                android:id="@+id/progressBarGPS"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout style="@style/scan_button_container_style">

            <ProgressBar
                android:id="@+id/progressBarSensor"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/scan_text_style"
            android:text="@string/device" />

        <TextView
            style="@style/scan_text_style"
            android:text="@string/display" />

        <TextView
            style="@style/scan_text_style"
            android:text="@string/gps" />

        <TextView
            style="@style/scan_text_style"
            android:text="@string/sensor" />
    </LinearLayout>

    <TextView
        android:id="@+id/test_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/device_text_background"
        android:gravity="center"
        android:text="@string/device"
        android:textStyle="bold" />

    <mobello.amtrust.com.widget.NonSwipableViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>