<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="mobello.amtrust.com.activity.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo" />

    <com.andexert.library.RippleView
        android:id="@+id/fp_container"
        style="@style/Wrap_Content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:rv_alpha="1"
        app:rv_centered="true"
        app:rv_rippleDuration="100"
        app:rv_type="rectangle"
        app:rv_zoom="true">

        <TextView
            android:id="@+id/forgot_password"
            style="@style/Wrap_Content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/forgot_password_bg"
            android:padding="2dp"
            android:text="@string/forgot_password"
            android:textColor="@color/login_green"
            android:textSize="18sp" />

    </com.andexert.library.RippleView>

    <com.andexert.library.RippleView
        android:id="@+id/login_container"
        style="@style/login_button_ripple"
        android:layout_above="@+id/fp_container"
        app:rv_centered="true"
        app:rv_color="@color/login_green_ripple"
        app:rv_rippleDuration="500"
        app:rv_type="simpleRipple"
        app:rv_zoom="true"
        app:rv_zoomDuration="100">

        <TextView
            android:id="@+id/login"
            style="@style/login_button"
            android:text="@string/login" />

    </com.andexert.library.RippleView>

    <LinearLayout
        android:id="@+id/email_container"
        style="@style/login_edittext_layout"
        android:layout_above="@+id/password_container">

        <com.joanzapata.iconify.widget.IconTextView
            style="@style/login_edittext_icon"
            android:layout_marginLeft="10dp"
            android:text="{fa-envelope}" />

        <EditText
            android:id="@+id/email"
            style="@style/login_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/email_address"
            android:inputType="text"
            android:text=""/>

        <!-- parthiban@mobellotech.com -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_container"
        style="@style/login_edittext_layout"
        android:layout_above="@+id/login_container">

        <com.joanzapata.iconify.widget.IconTextView
            style="@style/login_edittext_icon"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/password"
            android:text="{fa-key}" />

        <EditText
            android:id="@+id/password"
            style="@style/login_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""/>

        <!--password-->
    </LinearLayout>

    <TextView
        style="@style/Wrap_Content"
        android:layout_above="@+id/email_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#426396"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"/>

</RelativeLayout>
