<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_logo" />

        <com.andexert.library.RippleView
            android:id="@+id/reg_container"
            style="@style/login_button_ripple"
            android:layout_above="@+id/login_container"
            app:rv_centered="true"
            app:rv_color="@color/login_green_ripple"
            app:rv_rippleDuration="100"
            app:rv_type="rectangle"
            app:rv_zoom="true"
            app:rv_zoomDuration="100">

            <TextView
                android:id="@+id/register"
                style="@style/login_button"
                android:layout_above="@+id/login"
                android:text="@string/register" />

        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/login_container"
            style="@style/login_button_ripple"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            app:rv_centered="true"
            app:rv_color="@color/login_green_ripple"
            app:rv_rippleDuration="100"
            app:rv_type="rectangle"
            app:rv_zoom="true"
            app:rv_zoomDuration="100">

            <TextView
                android:id="@+id/login"
                style="@style/login_button"
                android:text="@string/login" />
        </com.andexert.library.RippleView>


        <me.grantland.widget.AutofitTextView
            style="@style/Wrap_Height"
            android:layout_above="@+id/reg_container"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:maxLines="1"
            android:text="@string/login_page_quotes"
            android:textColor="#555555"
            android:textSize="18sp"
            app:minTextSize="16sp"
            android:visibility="gone"/>

    </RelativeLayout>

</FrameLayout>
