<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="mobello.amtrust.com.activity.ForgotPasswordActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/actionbar" />

    <LinearLayout
        android:id="@+id/email_container"
        style="@style/Wrap_Height"
        android:layout_below="@+id/action_bar"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edittext_bg"
        android:gravity="center_vertical"
        android:padding="10dp">

        <com.joanzapata.iconify.widget.IconTextView
            style="@style/login_edittext_icon"
            android:layout_marginLeft="10dp"
            android:text="{fa-envelope}" />

        <EditText
            android:id="@+id/email"
            style="@style/login_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/email"
            android:inputType="text"
            android:text="parthiban@mobellotech.com"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_container"
        style="@style/Wrap_Height"
        android:layout_below="@+id/email_container"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edittext_bg"
        android:gravity="center_vertical"
        android:padding="10dp">

        <com.joanzapata.iconify.widget.IconTextView
            style="@style/login_edittext_icon"
            android:layout_marginLeft="10dp"
            android:text="{fa-envelope}" />

        <EditText
            android:id="@+id/mobile"
            style="@style/login_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/phone"
            android:inputType="text"
            android:text="919773303037"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lname_container"
        style="@style/Wrap_Height"
        android:layout_below="@+id/phone_container"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edittext_bg"
        android:gravity="center_vertical"
        android:padding="10dp">

        <com.joanzapata.iconify.widget.IconTextView
            style="@style/login_edittext_icon"
            android:layout_marginLeft="10dp"
            android:text="{fa-envelope}" />

        <EditText
            android:id="@+id/lname"
            style="@style/login_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:text="R"/>

    </LinearLayout>

    <!--<LinearLayout
        android:id="@+id/password_container"
        style="@style/Wrap_Height"
        android:layout_below="@+id/email_container"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edittext_bg"
        android:gravity="center_vertical"
        android:padding="10dp">

        <com.joanzapata.iconify.widget.IconTextView
            style="@style/login_edittext_icon"
            android:layout_marginLeft="10dp"
            android:text="{fa-envelope}" />

        <EditText
            android:id="@+id/password"
            style="@style/login_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_password_container"
        style="@style/Wrap_Height"
        android:layout_below="@+id/password_container"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edittext_bg"
        android:gravity="center_vertical"
        android:padding="10dp">

        <com.joanzapata.iconify.widget.IconTextView
            style="@style/login_edittext_icon"
            android:layout_marginLeft="10dp"
            android:text="{fa-envelope}" />

        <EditText
            android:id="@+id/confirm_password"
            style="@style/login_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/confirm_password"
            android:inputType="text" />

    </LinearLayout>-->

    <com.andexert.library.RippleView
        android:id="@+id/login_container"
        style="@style/login_button_ripple"
        app:rv_centered="true"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="20dp"
        app:rv_color="@color/login_green_ripple"
        app:rv_rippleDuration="500"
        app:rv_type="simpleRipple"
        app:rv_zoom="true"
        app:rv_zoomDuration="100"
        android:layout_below="@+id/lname_container">

        <TextView
            android:id="@+id/submit"
            style="@style/login_button"
            android:text="@string/submit" />

    </com.andexert.library.RippleView>

</RelativeLayout>
